[package]
name = "ipxemu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "wsock32"

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4.27"
lock_api = "0.4.13"
windows-strings = { version = "0.4.2", default-features = false }

[dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Kernel",
]

[build-dependencies]
cc = "1.2.35"
winresource = "0.1.23"

[profile.dev]
lto = true
panic = "abort"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = "s"
